--- a/style.css
+++ b/style.css
@@ -219,10 +219,9 @@ a:hover {
 
 .slider__item {
     min-width: 100%;
-}
-
-.slider__item img {
-    width: 100%;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
     border-radius: 8px;
 }
 
@@ -240,6 +239,7 @@ a:hover {
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    border: none;
 }
 
 .slider__dot.active {
